--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -242,8 +242,9 @@
 
     .chat-form-button {
       height: 30px;
+      padding: 10px 20px;
       margin-top: 5px;
-      width: 15%;
+      font-weight: bold;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
