--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -76,22 +76,12 @@
 }
 
 .home-top {
-//   height: 278px;
   width: 870px;
   padding: 20px 0px;
   padding-right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .home-bulletin {
