--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -4,7 +4,7 @@
   // height: 225px;
   position: relative;
   // padding-bottom: 5px;
-  padding-top: 40px;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-content: space-between;
@@ -35,7 +35,7 @@
   .pool-list-alert {
     font-size: 25px;
     opacity: .5;
-    height: 210px;
+    // height: 210px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -43,14 +43,24 @@
   }
 
   .pool-list-bottom {
-    height: 180px;
+    // height: 180px;
+    padding-top: 20px;
+    width: 870px;
     padding-left: 5px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    align-content: flex-start;
-    overflow-y: overlay;
+    justify-content: center;
+
+    .pool-list-bottom-bottom {
+      display: flex;
+      flex-direction: row;
+    }
+
+
+    // flex-wrap: wrap;
+    // align-items: flex-start;
+    // align-content: flex-start;
+    // overflow-y: overlay;
 
     .pool-list-item {
       // height: 37.5px;
@@ -80,7 +90,7 @@
     //     }     
     // }
     .pool-create-button, .pool-join-button {
-      margin: 7.5px 5px;
+      margin: 0px 5px;
       // margin-right: 20px;
       height: 30px;
       width: 140px;
