--- a/app/assets/stylesheets/base/websponsive.scss
+++ b/app/assets/stylesheets/base/websponsive.scss
@@ -122,7 +122,7 @@
         height: auto;
         padding: 20px 0px;
         padding-right: 20px;
-        flex-direction: column-reverse;
+        flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
                 
