--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -121,15 +121,6 @@
 //   }
 // }
 
-.overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: 1;        
-}
 
 .splash-container {
 //   min-height: 100%;
@@ -221,9 +212,16 @@
       }
   }
 }
-
+.overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;        
+}
 .splash-mid {
-//   height: 500px;
   width: 100%;
   padding: 60px 0px;
   display: -webkit-box;
@@ -233,21 +231,12 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-//   -ms-flex-pack: distribute;
-//       justify-content: space-around;
--webkit-box-pack: center;
--ms-flex-pack: center;
-        justify-content: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
+     -ms-flex-align: center;
           align-items: center;
-    //   background: $drk-primary;
-    // background: url(http://i.huffpost.com/gen/2312972/images/o-ODELL-facebook.jpg);
-    // background-size: 100%;
-    // background-image: url(http://i.huffpost.com/gen/2312972/images/o-ODELL-facebook.jpg);
-    
-    // background-repeat: no-repeat;
-
 
   .splash-mid-content {
     width: 870px;
@@ -271,7 +260,6 @@
 }
 
 .splash-bottom {
-  // height: 327px;
   width: 100%;
   padding: 40px 0px;
   display: -webkit-box;
@@ -287,12 +275,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #E9EBEE;        
-  // background: white;
-  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  background: #E9EBEE;
 
   h1 {
-    // width: 870px;
     font-size: 30px;
     margin-bottom: 25px;
     font-weight: bold;
@@ -324,13 +309,12 @@
     border: none;
     border-radius: 25%;
     }
-}
+  }
 }
 
 .splash-teaser {
   width: 100%;
-//   padding: 40px 0px;
-  padding-top: 40px;
+  padding: 40px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -358,4 +342,27 @@
     line-height: 35px;
     width: 870px;
   }
+}
+
+.splash-promo {
+    width: 100%;
+    padding: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #E9EBEE;
+
+    h1 {
+        font-size: 30px;
+        margin-bottom: 25px;
+        font-weight: bold;
+        text-align: center;
+      }
+      p {
+        text-align: center;
+        font-size: 20px;
+        line-height: 35px;
+        width: 870px;
+      }
 }
