--- a/app/assets/stylesheets/base/websponsive.scss
+++ b/app/assets/stylesheets/base/websponsive.scss
@@ -104,6 +104,16 @@
         width: initial;
       }
     }
+    .splash-promo {
+      padding-right: 20px;
+      padding-left: 20px;
+      h1 {
+        width: initial;
+      }
+      p {
+        width: initial;
+      }
+    }
     // faq 
     .faq {
       font-size: 20px;
