padding on pool create form

--- a/app/assets/stylesheets/components/home/create_pool_form.scss
+++ b/app/assets/stylesheets/components/home/create_pool_form.scss
@@ -1,5 +1,6 @@
 .pool-form-container {
   // height: 850px;
+  padding: 20px 0px;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
