--- a/app/assets/stylesheets/components/home/create_pool_form.scss
+++ b/app/assets/stylesheets/components/home/create_pool_form.scss
@@ -1,6 +1,6 @@
 .pool-form-container {
   // height: 850px;
-  padding: 20px 0px;
+  padding: 40px 0px;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11,6 +11,17 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+
+  .submit-row {
+    display: flex;
+    justify-content: space-between;
+
+    .back-button {
+      width: 90px;
+      height: 30px;
+      font-size: 15px;
+    }
+  }
 }
 
 .pool-form {
@@ -22,7 +33,7 @@
     width: 90px;
     height: 30px;
     font-size: 15px;
-    margin-left: auto;
+    // margin-left: auto;
   }
 }
 
