--- a/app/assets/stylesheets/components/console/_.scss
+++ b/app/assets/stylesheets/components/console/_.scss
@@ -11,6 +11,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   font-size: 20px;
+  padding: 20px 0px;
 
   .game-list {
     display: -webkit-box;
@@ -93,6 +94,7 @@
   .week-form {
     width: 50%;
     padding: 50px 0px;
-    margin: auto;
+    padding-left: 10px;
+    margin-right: auto;
   }
 }
