--- a/app/assets/stylesheets/components/faq/_.scss
+++ b/app/assets/stylesheets/components/faq/_.scss
@@ -12,11 +12,15 @@
 .pricing {
   width: 870px;
   padding: 10px 0px;
-  margin: auto;
+  // margin: auto;
   .top-text {
     margin-bottom: 10px;
   }
   .rates {
     margin-bottom: 10px;
+  }
+  .title {
+    font-weight: bold;
+    margin-bottom: 2.5px;
   }
 }
