--- a/app/assets/stylesheets/components/metrics/_.scss
+++ b/app/assets/stylesheets/components/metrics/_.scss
@@ -129,5 +129,9 @@
     div:first-child {
       font-weight: bold;
     }
+    .team-name {
+      display: flex;
+      justify-content: flex-start;
+    }
   }
 }
