--- a/app/assets/stylesheets/components/moderator/_.scss
+++ b/app/assets/stylesheets/components/moderator/_.scss
@@ -1,168 +1,6 @@
-// .moderator-container {
-//   width: 780px;
-//   display: flex; 
-//   justify-content: center;
-//   align-items: center;
-//   flex-direction: column;
-
-//   .header {
-//     margin-right: auto;
-//     padding-bottom: 30px;
-//     font-size: 20px;
-//     opacity: .5;
-//     font-weight: bold;
-//   }
-//   .moderator-bulletin-form {
-//     width: 780px;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     .bulletin-form {
-//       width: 780px;
-//     }
-//     .poolform-group {
-//       margin-bottom: 0px;
-//     }
-//     .bulletin-form-button-row {
-//       display: flex;
-//       justify-content: flex-end;
-//       padding: 10px 5px;
-//       padding-bottom: 20px;
-//       input {
-//         margin-left: 10px;
-//       }
-//       .bulletin-form-button {
-//         width: 90px;
-//         height: 30px;
-//         font-size: 15px;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         border-radius: 3px;
-//         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-//         transition: .2s;
-//         background: white;
-//         border: 1px $drk-primary solid;
-//         color: $drk-primary;
-//       }
-//       .bulletin-form-button:hover {
-//         color: white;
-//         background: $drk-primary;
-//       }
-//     }
-//   }
-//   .moderator-name-form {
-//     width: 780px;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     .name-form {
-//       width: 780px;
-//     }
-//     .poolform-group {
-//       margin-bottom: 0px;
-//     }
-//     .name-form-button-row {
-//       display: flex;
-//       justify-content: flex-end;
-//       padding: 10px 5px;
-//       padding-bottom: 20px;
-//       input {
-//         margin-left: 10px;
-//       }
-//       .name-form-button {
-//         width: 90px;
-//         height: 30px;
-//         font-size: 15px;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         border-radius: 3px;
-//         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-//         transition: .2s;
-//         background: white;
-//         border: 1px $drk-primary solid;
-//         color: $drk-primary;
-//       }
-//       .name-form-button:hover {
-//         color: white;
-//         background: $drk-primary;
-//       }
-//     }
-//   }
-
-//   .moderator-buy-form {
-//     width: 780px;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     .buy-form {
-//       width: 780px;
-//     }
-//     .poolform-group {
-//       margin-bottom: 0px;
-//     }
-//     .buy-form-button-row {
-//       display: flex;
-//       justify-content: flex-end;
-//       padding: 10px 5px;
-//       padding-bottom: 20px;
-//       input {
-//         margin-left: 10px;
-//       }
-//       .buy-form-button {
-//         width: 90px;
-//         height: 30px;
-//         font-size: 15px;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         border-radius: 3px;
-//         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-//         transition: .2s;
-//         background: white;
-//         border: 1px $drk-primary solid;
-//         color: $drk-primary;
-//       }
-//       .buy-form-button:hover {
-//         color: white;
-//         background: $drk-primary;
-//       }
-//     }
-//   }
-//   .pool-roster {
-//     width: 100%;
-//     font-size: 15px;
-//     .member-name {
-//       padding: 0px 5px;
-//       font-weight: bold;
-//     }
-//     .roster-header {
-//       font-size: 20px;
-//       margin-right: auto;
-//       padding-bottom: 5px;
-//       opacity: .5;
-//       font-weight: bold;
-//     }
-//     .fa-times {
-//       padding: 0px 5px;
-//       color: $best-red;
-//     }
-//     .fa-usd {
-//       padding: 0px 5px;
-//     }
-//     .pool-member {
-//       padding: 5px 0px;
-//       display: flex;
-//     }
-//   }
-// }
-
 .moderator-container {
   width: 780px;
+  padding: 20px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; 
