--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -1,248 +1,3 @@
-// .splash-container {
-// //   min-height: 100%;
-//   width: 100%;
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-box-orient: vertical;
-//   -webkit-box-direction: normal;
-//       -ms-flex-direction: column;
-//           flex-direction: column;
-//   -webkit-box-pack: center;
-//       -ms-flex-pack: center;
-//           justify-content: center;
-//   -webkit-box-align: center;
-//       -ms-flex-align: center;
-//           align-items: center;
-//   // background: $lt-primary;
-
-// //   min-height: 100%;
-//   background-image: url(http://s1.ibtimes.com/sites/www.ibtimes.com/files/2014/11/24/odell-beckham.jpg);
-//   background-size: cover;
-//   background-attachment: fixed;
-//   background-repeat: no-repeat;
-//   background-position: center center;
-// }
-
-// .splash-top {
-// //   height: 327px;
-//   width: 100%;
-//   padding: 40px 0px;
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-box-orient: vertical;
-//   -webkit-box-direction: normal;
-//       -ms-flex-direction: column;
-//           flex-direction: column;
-//   -webkit-box-pack: center;
-//       -ms-flex-pack: center;
-//           justify-content: center;
-//   -webkit-box-align: center;
-//       -ms-flex-align: center;
-//           align-items: center;
-//   background: #E9EBEE;        
-
-//   span {
-//     font-weight: bold;
-//   }
-
-//   h1 {
-//     font-size: 40px;
-//     margin-bottom: 25px;
-//     font-weight: bold;
-//   }
-
-//   .logo-container {
-//     width: 300px;
-//     height: 79px;
-//     background: url(image_path('myonlinepool-logo.png'));
-//     background-size: cover;
-//   }
-
-//   p {
-//     width: 870px;
-//     text-align: center;
-//     font-size: 20px;
-//     line-height: 35px;
-//     margin-bottom: 25px;
-//   }
-
-//   .action-call {
-//       width: 140px;
-//       height: 40px;
-//       border-radius: 2px;
-//       font-size: 20px;
-//       font-weight: bold;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       background: white;
-//       border: 1px black solid;
-//       -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-//       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-//       &:hover{
-//           background: $drk-primary;
-//           color: white; 
-//           border: none;
-//       }
-//   }
-// }
-// .overlay {
-//     background-color: rgba(0, 0, 0, 0.5);
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     position: relative;
-//     z-index: 1;        
-// }
-// .splash-mid {
-//   width: 100%;
-//   padding: 60px 0px;
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-box-orient: vertical;
-//   -webkit-box-direction: normal;
-//       -ms-flex-direction: column;
-//           flex-direction: column;
-//   -webkit-box-pack: center;
-//   -ms-flex-pack: center;
-//           justify-content: center;
-//   -webkit-box-align: center;
-//      -ms-flex-align: center;
-//           align-items: center;
-
-//   .splash-mid-content {
-//     width: 870px;
-
-//     h1 {
-//         font-size: 30px;
-//         color: white;
-//         font-weight: bold;
-//         margin-bottom: 75px;
-//         text-align: right;
-//     }
-
-//     p {
-//         text-align: right;
-//         font-size: 25px;
-//         line-height: 45px;
-//         color: white;
-//         font-weight: bold;
-//     }
-//   }
-// }
-
-// .splash-bottom {
-//   width: 100%;
-//   padding: 40px 0px;
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-box-orient: vertical;
-//   -webkit-box-direction: normal;
-//       -ms-flex-direction: column;
-//           flex-direction: column;
-//   -webkit-box-pack: center;
-//       -ms-flex-pack: center;
-//           justify-content: center;
-//   -webkit-box-align: center;
-//       -ms-flex-align: center;
-//           align-items: center;
-//   background: #E9EBEE;
-
-//   h1 {
-//     font-size: 30px;
-//     margin-bottom: 25px;
-//     font-weight: bold;
-//     text-align: center;
-//   }
-//   p {
-//     width: 870px;
-//     text-align: center;
-//     font-size: 20px;
-//     line-height: 35px;
-//     margin-bottom: 25px;
-//   }
-//   .splash-mid-carousel {
-//     padding: 20px 20px;
-//     display: -webkit-box;
-//     display: -ms-flexbox;
-//     display: flex;
-//     -webkit-box-pack: center;
-//         -ms-flex-pack: center;
-//             justify-content: center;
-//     -webkit-box-align: center;
-//         -ms-flex-align: center;
-//             align-items: center;
-
-//     div[class^='logo-'] {
-//     margin: 0px 10px;
-//     height: 90px;
-//     width: 80px;
-//     border: none;
-//     border-radius: 25%;
-//     }
-//   }
-// }
-
-// .splash-teaser {
-//   width: 100%;
-//   padding: 40px 0px;
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -webkit-box-orient: vertical;
-//   -webkit-box-direction: normal;
-//       -ms-flex-direction: column;
-//           flex-direction: column;
-//   -webkit-box-pack: center;
-//       -ms-flex-pack: center;
-//           justify-content: center;
-//   -webkit-box-align: center;
-//       -ms-flex-align: center;
-//           align-items: center;
-//   background: $drk-primary;
-//   color: white;
-//   h1 {
-//     font-size: 30px;
-//     margin-bottom: 25px;
-//     font-weight: bold;
-//     text-align: center;
-//   }
-//   p {
-//     text-align: center;
-//     font-size: 20px;
-//     line-height: 35px;
-//     width: 870px;
-//   }
-// }
-
-// .splash-promo {
-//     width: 100%;
-//     padding: 40px 0px;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     background: #E9EBEE;
-
-//     h1 {
-//         font-size: 30px;
-//         margin-bottom: 25px;
-//         font-weight: bold;
-//         text-align: center;
-//       }
-//       p {
-//         text-align: center;
-//         font-size: 20px;
-//         line-height: 35px;
-//         width: 870px;
-//       }
-// }
-
 .splash-container {
       min-height: 100%; 
       width: 100%;
@@ -251,15 +6,16 @@
       display: flex;
       flex-direction: column;
     
-      background-image: url(http://s1.ibtimes.com/sites/www.ibtimes.com/files/2014/11/24/odell-beckham.jpg);
-      background-size: cover;
+    //   background-image: url(http://s1.ibtimes.com/sites/www.ibtimes.com/files/2014/11/24/odell-beckham.jpg);
+      background-image: url(https://i.pinimg.com/originals/00/c5/4d/00c54d3346eb49cfac11241587008f84.jpg);
+      background-size: contain;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-position: center center;
+      background-position: center 94px;
     }
     
     .splash-top {
-      min-height: 327px;
+      min-height: 350px;
       width: 100%;
       padding: 40px 0px;
       display: -webkit-box;
@@ -330,7 +86,7 @@
       }
     }
     .overlay {
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.25);
         top: 0;
         left: 0;
         width: 100%;
