splash background from contain to cover

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -8,7 +8,7 @@
     
     //   background-image: url(http://s1.ibtimes.com/sites/www.ibtimes.com/files/2014/11/24/odell-beckham.jpg);
       background-image: url(https://i.pinimg.com/originals/00/c5/4d/00c54d3346eb49cfac11241587008f84.jpg);
-      background-size: contain;
+      background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-position: center 94px;
