--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -47,7 +47,8 @@
         margin-bottom: 10px;  
         width: 500px;
         height: 120px;
-        background: url(image_path('myonlinepool-logo-wht.png'));
+        // background: url(image_path('myonlinepool-logo-wht.png'));
+        background: url(image_path('short-logo.gif'));
         background-size: cover;
       }
     
