--- a/app/assets/stylesheets/components/picksview/_.scss
+++ b/app/assets/stylesheets/components/picksview/_.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  overflow-x: overlay;
+  overflow-x: auto;
 
   .picks-view-header {
     width: 1300px;
