picksview responsive refactor final

--- a/app/assets/stylesheets/components/picksview/_.scss
+++ b/app/assets/stylesheets/components/picksview/_.scss
@@ -1,11 +1,11 @@
 .picks-view {
-  padding: 20px 0px;
+  padding: 20px;
   width: 100%;
   // min-width: 1300px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  // justify-content: flex-start;
+  // align-items: center;
   overflow-x: auto;
 
   .picks-view-header {
@@ -87,6 +87,8 @@
     }
   }
   .back-button {
-    padding: 5px 10px;
+    margin: auto;
+    height: 40px;
+    width: 100px;
   }
 }
